--- a/.github/workflows/php-tests.yml
+++ b/.github/workflows/php-tests.yml
@@ -12,10 +12,12 @@ jobs:
     strategy:
       matrix:
         laravel: ['6', '7', '8', '9']
-        php: ['7.4', '8.0', '8.1']
+        php: ['7.4', '8.0', '8.1', '8.2']
         exclude:
           - { laravel: '6', php: '8.1' }
+          - { laravel: '6', php: '8.2' }
           - { laravel: '7', php: '8.1' }
+          - { laravel: '7', php: '8.2' }
           - { laravel: '9', php: '7.4' }
 
     name: PHP ${{ matrix.php }} Laravel ${{ matrix.laravel }}
@@ -28,6 +30,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php }}
+          ini-values: error_reporting=E_ALL
           coverage: pcov
 
       - name: Setup Problem Matchers
