--- a/.github/workflows/php-tests.yml
+++ b/.github/workflows/php-tests.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        laravel: ['6', '7', '8', '9']
+        laravel: ['6', '7', '8', '9', 10]
         php: ['7.4', '8.0', '8.1', '8.2']
         exclude:
           - { laravel: '6', php: '8.1' }
