--- a/.github/workflows/php-tests.yml
+++ b/.github/workflows/php-tests.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        laravel: ['6', '7', '8', '9', 10]
+        laravel: ['6', '7', '8', '9', '10']
         php: ['7.4', '8.0', '8.1', '8.2']
         exclude:
           - { laravel: '6', php: '8.1' }
@@ -19,6 +19,8 @@ jobs:
           - { laravel: '7', php: '8.1' }
           - { laravel: '7', php: '8.2' }
           - { laravel: '9', php: '7.4' }
+          - { laravel: '10', php: '7.4' },
+          - { laravel: '10', php: '8.0' }
 
     name: PHP ${{ matrix.php }} Laravel ${{ matrix.laravel }}
 
