--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         bootstrap="tests/autoload.php"
+         bootstrap="vendor/autoload.php"
          backupGlobals="false"
          beStrictAboutTestsThatDoNotTestAnything="false"
          colors="true"
