--- a/.github/workflows/php-tests.yml
+++ b/.github/workflows/php-tests.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         laravel: ['9', '10']
-        php: ['8.1', '8.2']
+        php: ['8.1', '8.2', '8.3']
 
     name: PHP ${{ matrix.php }} Laravel ${{ matrix.laravel }}
 
