--- a/composer.json
+++ b/composer.json
@@ -27,18 +27,18 @@
     ],
     "require": {
         "php": "^8.0",
-        "illuminate/config": "^9.0|^10.0",
-        "illuminate/contracts": "^9.0|^10.0",
-        "illuminate/http": "^9.0|^10.0",
-        "illuminate/support": "^9.0|^10.0",
-        "illuminate/translation": "^9.0|^10.0",
-        "illuminate/validation": "^9.0|^10.0",
-        "illuminate/view": "^9.0|^10.0",
-        "symfony/http-foundation": "^6.0"
+        "illuminate/config": "^9.0|^10.0|^11.0",
+        "illuminate/contracts": "^9.0|^10.0|^11.0",
+        "illuminate/http": "^9.0|^10.0|^11.0",
+        "illuminate/support": "^9.0|^10.0|^11.0",
+        "illuminate/translation": "^9.0|^10.0|^11.0",
+        "illuminate/validation": "^9.0|^10.0|^11.0",
+        "illuminate/view": "^9.0|^10.0|^11.0",
+        "symfony/http-foundation": "^6.0|^7.0"
     },
     "require-dev": {
         "mockery/mockery": "^1.0",
-        "orchestra/testbench": "^7.0|^8.0",
+        "orchestra/testbench": "^7.0|^8.0|^9.0",
         "phpunit/phpunit": "^9.5|^10.0"
     },
     "autoload": {
