--- a/.github/workflows/php-tests.yml
+++ b/.github/workflows/php-tests.yml
@@ -9,10 +9,14 @@ on:
 jobs:
   tests:
     runs-on: ubuntu-latest
+
     strategy:
       matrix:
-        laravel: ['9', '10']
+        laravel: ['9', '10', '11']
         php: ['8.1', '8.2', '8.3']
+        exclude:
+          - laravel: '11'
+            php: '8.1'
 
     name: PHP ${{ matrix.php }} Laravel ${{ matrix.laravel }}
 
