--- a/.github/workflows/php-tests.yml
+++ b/.github/workflows/php-tests.yml
@@ -13,10 +13,14 @@ jobs:
     strategy:
       matrix:
         laravel: ['9', '10', '11']
-        php: ['8.1', '8.2', '8.3']
+        php: ['8.1', '8.2', '8.3', '8.4']
         exclude:
           - laravel: '11'
             php: '8.1'
+          - laravel: '9'
+            php: '8.4'
+          - laravel: '10'
+            php: '8.4'
 
     name: PHP ${{ matrix.php }} Laravel ${{ matrix.laravel }}
 
