--- a/.github/workflows/php-tests.yml
+++ b/.github/workflows/php-tests.yml
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        laravel: ['9', '10', '11']
+        laravel: ['9', '10', '11', '12']
         php: ['8.1', '8.2', '8.3', '8.4']
         exclude:
           - laravel: '11'
@@ -21,6 +21,8 @@ jobs:
             php: '8.4'
           - laravel: '10'
             php: '8.4'
+          - laravel: '12'
+            php: '8.1'
 
     name: PHP ${{ matrix.php }} Laravel ${{ matrix.laravel }}
 
