--- a/.github/workflows/php-tests.yml
+++ b/.github/workflows/php-tests.yml
@@ -12,13 +12,15 @@ jobs:
 
     strategy:
       matrix:
-        laravel: ['10', '11']
+        laravel: ['10', '11', '12']
         php: ['8.1', '8.2', '8.3', '8.4']
         exclude:
           - laravel: '11'
             php: '8.1'
           - laravel: '10'
             php: '8.4'
+          - laravel: '12'
+            php: '8.1'
 
     name: PHP ${{ matrix.php }} Laravel ${{ matrix.laravel }}
 
@@ -56,4 +58,4 @@ jobs:
 
       - name: Check code coverage
         uses: codecov/codecov-action@v4
-        if: "matrix.php == '8.2' && matrix.laravel == '10'"
+        if: "matrix.php == '8.4' && matrix.laravel == '12'"
