--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp-rename": "^2.0.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-uglify": "^3.0.2",
+    "requirejs": "^2.3.8",
     "webpack": "^5.99.1",
     "webpack-cli": "^6.0.1",
     "webpack-stream": "^7.0.0"
