--- a/.github/workflows/php-tests.yml
+++ b/.github/workflows/php-tests.yml
@@ -12,17 +12,9 @@ jobs:
 
     strategy:
       matrix:
-        laravel: [10, 11, 12, 13]
-        php: ['8.1', '8.2', '8.3', '8.4']
+        laravel: [11, 12, 13]
+        php: ['8.2', '8.3', '8.4']
         exclude:
-          - laravel: '11'
-            php: '8.1'
-          - laravel: '10'
-            php: '8.4'
-          - laravel: '12'
-            php: '8.1'
-          - laravel: '13'
-            php: '8.1'
           - laravel: '13'
             php: '8.2'
 
@@ -41,14 +33,6 @@ jobs:
 
       - name: Setup Problem Matchers
         run: echo "::add-matcher::${{ runner.tool_cache }}/phpunit.json"
-
-      - name: Select Laravel 10
-        uses: nick-invision/retry@v3.0.2
-        with:
-          timeout_minutes: 5
-          max_attempts: 5
-          command: composer require "laravel/framework:10.*" "phpunit/phpunit:^10" --no-update --no-interaction
-        if: matrix.laravel == '10'
 
       - name: Install PHP Dependencies
         uses: nick-invision/retry@v3.0.2
